Правки по тестам StatsClient и StatsClientTest