@@ -5,23 +5,24 @@ import dto.ViewStatsDto;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cloud.client.ServiceInstance;
+import org.springframework.cloud.client.discovery.DiscoveryClient;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.retry.support.RetryTemplate;
 import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestClient;
 import org.springframework.web.client.RestClientException;
-import org.springframework.cloud.client.discovery.DiscoveryClient;
 import org.springframework.web.util.UriComponents;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.net.URI;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
-import  org.springframework.util.MultiValueMap;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON;
 
@@ -32,7 +33,9 @@ public class StatsClient {
     private final DiscoveryClient discoveryClient;
     private final String statsServerId;
     private final RetryTemplate retryTemplate;
+    private final String baseUrl;
 
+    // Конструктор для использования с DiscoveryClient
     public StatsClient(@Value("${stats-client.id}") String statsServerId,
                        DiscoveryClient discoveryClient,
                        RetryTemplate retryTemplate) {
@@ -40,6 +43,16 @@ public class StatsClient {
         this.discoveryClient = discoveryClient;
         this.retryTemplate = retryTemplate;
         this.restClient = RestClient.builder().build();
+        this.baseUrl = null;
+    }
+
+    // Конструктор для тестирования (без DiscoveryClient)
+    public StatsClient(String baseUrl, RetryTemplate retryTemplate) {
+        this.statsServerId = null;
+        this.discoveryClient = null;
+        this.retryTemplate = retryTemplate;
+        this.restClient = RestClient.builder().build();
+        this.baseUrl = baseUrl;
     }
 
     /**
@@ -51,11 +64,6 @@ public class StatsClient {
      * @return true если информация успешно сохранена, false в противном случае
      */
     public boolean saveStat(String app, String uri, String ip) {
-        if (restClient == null) {
-            log.error("Сервер статистики не найден");
-            return false;
-        }
-
         if (app == null || app.isBlank()
                 || uri == null || uri.isBlank()
                 || ip == null || ip.isBlank()) {
@@ -71,9 +79,9 @@ public class StatsClient {
                 .build();
 
         try {
+            URI requestUri = makeUri("/hit");
             ResponseEntity<Void> response = restClient.post()
-                    //.uri("/hit")
-                    .uri(makeUri("/hit"))
+                    .uri(requestUri)
                     .contentType(APPLICATION_JSON)
                     .body(endpointHit)
                     .retrieve()
@@ -83,7 +91,10 @@ public class StatsClient {
             log.error("Сервер не доступен");
             return false;
         } catch (RestClientException ex) {
-            log.error(ex.getMessage());
+            log.error("Ошибка при сохранении статистики: {}", ex.getMessage());
+            return false;
+        } catch (RuntimeException ex) {
+            log.error("Ошибка: {}", ex.getMessage());
             return false;
         }
     }
@@ -110,44 +121,46 @@ public class StatsClient {
      * @return список статистики просмотров
      */
     public List<ViewStatsDto> getStats(LocalDateTime start, LocalDateTime end, List<String> uris, boolean unique) {
-        if (restClient == null) {
-            log.error("Сервер статистики не найден");
-            return List.of();
-        }
-
         if (start == null || end == null || end.isBefore(start)) {
             log.error("Дата окончания раньше даты начала");
-            return List.of();
+            return Collections.emptyList();
         }
 
-        log.info("Запрашиваем статистику : start - %s, end - %s, uris - %s, unique - %b"
-                .formatted(start.format(DATE_TIME_FORMATTER), end.format(DATE_TIME_FORMATTER), uris, unique));
+        log.info("Запрашиваем статистику : start - {}, end - {}, uris - {}, unique - {}",
+                start.format(DATE_TIME_FORMATTER), end.format(DATE_TIME_FORMATTER), uris, unique);
 
         MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("start", start.format(DATE_TIME_FORMATTER));
         params.add("end", end.format(DATE_TIME_FORMATTER));
-        params.add("unique", Boolean.valueOf(unique).toString());
-        params.add("uris", uris != null ? String.join(",", uris) : "");
+        params.add("unique", Boolean.toString(unique));
+
+        if (uris != null && !uris.isEmpty()) {
+            params.add("uris", String.join(",", uris));
+        }
 
         try {
-
-
-
+            URI requestUri = makeUri("/stats", params);
             List<ViewStatsDto> views = restClient.get()
-                    .uri(makeUri("/stats", params))
-                    .header("Content-Type", "application/json")
+                    .uri(requestUri)
                     .retrieve()
                     .body(new ParameterizedTypeReference<List<ViewStatsDto>>() {
                     });
 
-            log.info("Результат - %s".formatted(views.toString()));
-            return views;
+            if (views != null) {
+                log.info("Получено {} записей статистики", views.size());
+                return views;
+            } else {
+                return Collections.emptyList();
+            }
         } catch (ResourceAccessException ex) {
             log.error("Сервер не доступен");
-            return List.of();
+            return Collections.emptyList();
         } catch (RestClientException ex) {
-            log.error(ex.getMessage());
-            return List.of();
+            log.error("Ошибка при получении статистики: {}", ex.getMessage());
+            return Collections.emptyList();
+        } catch (RuntimeException ex) {
+            log.error("Ошибка: {}", ex.getMessage());
+            return Collections.emptyList();
         }
     }
 
@@ -156,21 +169,45 @@ public class StatsClient {
     }
 
     private URI makeUri(String path, MultiValueMap<String, String> params) {
-        ServiceInstance instance = retryTemplate.execute( context -> getInstance());
-        UriComponents uriComponents = UriComponentsBuilder
-                .fromUriString("http://" + instance.getHost() + ":" + instance.getPort())
-                .path(path)
-                .queryParams(params)
-                .build();
+        try {
+            String host;
+            int port;
+            if (baseUrl != null && !baseUrl.isEmpty()) {
+                UriComponents baseComponents = UriComponentsBuilder.fromHttpUrl(baseUrl).build();
+                host = baseComponents.getHost();
+                port = baseComponents.getPort() != -1 ? baseComponents.getPort() : 80;
+            } else {
+                ServiceInstance instance = retryTemplate.execute(context -> getInstance());
+                host = instance.getHost();
+                port = instance.getPort();
+            }
 
-        return uriComponents.toUri();
+            UriComponentsBuilder uriBuilder = UriComponentsBuilder.newInstance()
+                    .scheme("http")
+                    .host(host)
+                    .port(port)
+                    .path(path);
+
+            if (params != null) {
+                uriBuilder.queryParams(params);
+            }
+
+            return uriBuilder.build().toUri();
+        } catch (Exception ex) {
+            log.error("Ошибка при создании URI: {}", ex.getMessage());
+            throw new RuntimeException("Сервис статистики не доступен");
+        }
     }
 
     private ServiceInstance getInstance() {
         try {
-            return discoveryClient.getInstances(statsServerId).getFirst();
+            List<ServiceInstance> instances = discoveryClient.getInstances(statsServerId);
+            if (instances == null || instances.isEmpty()) {
+                throw new RuntimeException("Сервер статистики не найден");
+            }
+            return instances.getFirst();
         } catch (Exception ex) {
-            log.error("Сервер статистики не найден");
+            log.error("Сервер статистики не найден: {}", ex.getMessage());
             throw new RuntimeException("Сервер статистики не найден");
         }
     }
